--- a/src/components/SelectFlightTime/SelectFlightTime.module.css
+++ b/src/components/SelectFlightTime/SelectFlightTime.module.css
@@ -27,17 +27,16 @@
     height: 40px;
 }
 
-
-/*.activeButtonChangeTime {*/
-/*    border: none;*/
-/*    font-weight: 500;*/
-/*    border-radius: 10px;*/
-/*    font-size: 14px;*/
-/*    text-align: center;*/
-/*    cursor: pointer;*/
-/*    background-color: #DDE3EE;*/
-/*    color: #232323;*/
-/*    width: 110px;*/
-/*    height: 40px;*/
-/*    margin: 0 15px 0 0;*/
-/*}*/
+.activeButtonChangeTime {
+    border: none;
+    font-weight: 500;
+    border-radius: 10px;
+    font-size: 14px;
+    text-align: center;
+    cursor: pointer;
+    background-color: #DDE3EE;
+    color: #232323;
+    width: 110px;
+    height: 40px;
+    margin: 0 15px 0 0;
+}
